[gd_scene load_steps=7 format=3 uid="uid://k4efs4sopgl8"]

[ext_resource type="Script" path="res://Enemigo/asteroide_10.gd" id="1_f30pw"]
[ext_resource type="Texture2D" uid="uid://dxe7i6l4yvsfy" path="res://Assets/enemigos/Asteroid10.png" id="1_gfy47"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ediyn"]
radius = 60.1332

[sub_resource type="Animation" id="Animation_era40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pa2pj"]
resource_name = "daño"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.862745, 0, 0.184314, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wp8e"]
_data = {
"RESET": SubResource("Animation_era40"),
"daño": SubResource("Animation_pa2pj")
}

[node name="Asteroide10" type="Area2D" groups=["Enemigo"]]
script = ExtResource("1_f30pw")
speed = Vector2(60, 20)
health = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gfy47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ediyn")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.500002, 0.999997)
scale = Vector2(4.05, 4.3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4wp8e")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
